# ChangeDetectionRepository

./: hello.py  pyproject.toml  requirements.txt
src/Methodology/Traditional/PCAKmeans/: algorithm.py  main.py
src/Methodology/Traditional/SFA/: isfa.py
src/Methodology/util/: cluster_util.py
src/falcker_core/: util.py
